tests/baselines/reference/for-of29(strict=true).errors.txt
for-of29.ts(5,15): error TS2454: Variable 'iterableWithOptionalIterator' is used before being assigned.
for-of29.ts(5,15): error TS2488: Type '{ [Symbol.iterator]?(): Iterator<string, any, undefined>; }' must have a '[Symbol.iterator]()' method that returns an iterator.


==== for-of29.ts (2 errors) ====
    var iterableWithOptionalIterator: {
        [Symbol.iterator]?(): Iterator<string>
    };
    
    for (var v of iterableWithOptionalIterator) { }
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2454: Variable 'iterableWithOptionalIterator' is used before being assigned.
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ [Symbol.iterator]?(): Iterator<string, any, undefined>; }' must have a '[Symbol.iterator]()' method that returns an iterator.
    